--- a/style.css
+++ b/style.css
@@ -3,6 +3,10 @@
     margin: 0;
     padding: 0;
     max-height: 100vh;
+    font-family: "Mona Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
+}
+body{
+    background-color: #F1F3F4;
 }
 #header{
   display: flex;
@@ -60,5 +64,46 @@ align-items: center;
     width: 40px;
     height: 40px;
     border-radius: 50%;
+}
+
+/* display data */
+#product-section{
+   
+display: grid;
+grid-template-columns: repeat(5, 1fr);
+width: 90%;
+row-gap: 30px;
+margin: 40px auto;
+justify-items: center;
+height: 500px;
+}
+
+#single-product-div{
+width: calc(250px);
+box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;;
+background-color: #F9FBFC;
+height: fit-content;
+border-radius: 5px;
+cursor: pointer;
+}
+
+#product-image-div>img{
+width: 250px;
+background-color: #E2E8ED;
+}
+#product-brand{
+    font-size: 13px;
+    color: #BFBFC1;
+    font-weight: bold;
+    padding: 5px 0px 5px 10px;
+}
+#product-brand+h3{
+    font-weight: bold;
+    padding: 0 10px 10px;
+}
+#item-price-rate{
+    display: flex;
+    justify-content: space-between;
+    padding: 0px 10px 10px;
 }
 
