--- a/style.css
+++ b/style.css
@@ -11,6 +11,34 @@ body {
   background-color: #f1f3f4;
 }
 
+main {
+  margin-top: 100px;
+}
+
+.background-banner {
+  width: 100%;
+  height: 500px;
+  /* Adjust height as needed */
+  position: relative;
+  overflow: hidden;
+}
+
+/* Layer for background transition effect */
+.background-layer {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-size: cover;
+  background-position: center;
+  transition: opacity 1.5s ease-in-out;
+}
+
+/* Hide old image while fading in new one */
+.fade-out {
+  opacity: 0;
+}
 
 /* display data */
 #product-section {
@@ -58,12 +86,14 @@ body {
 
 /* category */
 #category-section {
-  display: flex;
-  flex-direction: column;
-  width: 80%;
-  margin: 40px auto 0px;
+  width: fit-content;
+  position: absolute;
+  top: 500px;
+  left: 50%;
+  transform: translateX(-50%);
+  z-index: 10;
   padding: 10px 20px 40px;
-  background-color: white;
+  background-color: rgb(255, 255, 255);
   border-radius: 20px;
   box-shadow: rgba(0, 0, 0, 0.05) 0px 0px 0px 1px;
 }
@@ -186,4 +216,42 @@ body {
 
 #rate>i {
   color: #EDA042;
+}
+
+/* category within sections */
+#categories-section {
+  margin: 2rem 0;
+  padding: 1rem;
+  background-color: #f9f9f9;
+  border-radius: 10px;
+}
+
+
+
+.categories-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  gap: 4rem;
+}
+
+.category-box {
+  width: 120px;
+  height: 60px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  border-radius: 10px;
+  color: #f8f7f7;
+  font-weight: bold;
+  cursor: pointer;
+  transition: transform 0.1s, background-color 0.2s;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+
+.category-box:hover {
+  transform: scale(1.01);
+  background-color: #d0d0d0;
 }
