--- a/admin/orders/css/OrdersManage.css
+++ b/admin/orders/css/OrdersManage.css
@@ -721,7 +721,30 @@
           }
           
 
+          /* this is our detail button */
          
+          #productiditbuttons {
+            background-color: #ee7f35; 
+            color: white;
+            border: none;
+            padding: 5px 10px;
+            font-size: 16px;
+            font-weight: bold;
+            border-radius: 5px;
+            cursor: pointer;
+            transition: background-color 0.3s ease, transform 0.2s ease;
+          }
+          
+          #productiditbuttons:hover {
+            background-color: #ee7f35; 
+            transform: scale(1.05);
+          }
+          
+          #productiditbuttons:active {
+            background-color: #ee7f35;
+            transform: scale(0.98);
+          }
+          
 
 
 
