admin page functions added with table and form

--- a/admin/dashboard/style.module.css
+++ b/admin/dashboard/style.module.css
@@ -119,6 +119,7 @@ nav .sidebar-button i{
   max-width: 550px;
   width: 100%;
   margin: 0 20px;
+  top:0
 }
 nav .search-box input{
   height: 100%;
