--- a/users/cartAndpayment/css/cartAndPayment.css
+++ b/users/cartAndpayment/css/cartAndPayment.css
@@ -310,3 +310,29 @@ padding-top: 50px;
     border: none;
     background-color: transparent;
 }
+
+.product-quantity-delete{
+    display: flex;
+   
+    align-items: center;
+    align-content: center;
+    gap: 20px;
+}
+
+
+.ri-delete-bin-6-line {
+    font-size: 20px;
+    z-index: 10;
+    pointer-events: auto;
+    cursor: pointer;
+    padding-bottom: 10px;
+}
+
+.empty-cart{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 200px;
+    color: indianred;
+    font-weight: bold;
+}
