Fixed Navbars in all user page, added auth to all pages, fixed redirections of all auth controlers, added orders and logout in navbar, fixed the orders page

--- a/css/footer.module.css
+++ b/css/footer.module.css
@@ -38,12 +38,17 @@ footer .logo-links {
   list-style-type: none;
 }
 
-.footer-links ul li:not(:first-of-type) {
+.footer-links ul li:not(:first-of-type),
+.footer-links ul li a {
   margin-block: 1rem;
   white-space: wrap;
   font-size: 0.85rem;
   color: #c1c1c1;
-  max-width: 100px;
+  max-width: 120px;
+}
+
+.footer-links ul li a {
+  text-decoration: none;
 }
 
 footer hr {
