--- a/admin/css/profile.css
+++ b/admin/css/profile.css
@@ -10,19 +10,13 @@ body {
     font-family: Arial, sans-serif;
 }
 
-.home-section {
-    position: relative;
-    background: #f5f5f5;
-    min-height: 10vh;
-    width: calc(100% - 240px);
-    left: 240px;
-    transition: all 0.5s ease;
-}
 h2{
+    margin-top: 60px;
     padding: 25px;
     padding-bottom: 0;
      
 }
+ 
 /* Profile Wrapper */
 .profile-wrapper {
     position: absolute;
@@ -30,6 +24,7 @@ h2{
     left: 240px;
     width: calc(100% - 240px);
     padding: 10px;
+     
 }
 
 .side-menu.active ~ .profile-wrapper {
@@ -48,8 +43,8 @@ h2{
 
 /* Profile Card */
 .profile-card {
-    width:85%;
-    margin-left: auto;  
+    width:95%;
+    margin-left:25px; 
     padding: 15px;
     background: #fff;
     border-radius: 8px;
@@ -59,6 +54,7 @@ h2{
 /* Layout */
 .layout-row {
     gap: 10px;
+    padding-top:20px;
 }
 
  
