--- a/admin/orders/css/OrdersManage.css
+++ b/admin/orders/css/OrdersManage.css
@@ -302,6 +302,7 @@ nav .profile-details i {
 
 .table-container {
   background-color: white;
+  overflow-x: auto;
   padding: 20px;
   border-radius: 10px;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
@@ -316,6 +317,7 @@ th,
 td {
   padding: 10px;
   text-align: left;
+
   border-bottom: 1px solid #ddd;
 }
 
@@ -357,6 +359,18 @@ th {
   width: 500px;
   height: 340px;
 }
+
+@media (max-width: 850px) {
+  .popup {
+left: 55%;
+  }
+  
+}
+@media (max-width: 700px) {
+  .popup {
+width: 300px;
+  }
+}
 .popup.active {
   display: block;
 }
@@ -378,9 +392,7 @@ th {
 .close-btn:hover {
   color: red;
 }
-.popup-content {
-  margin-bottom: 15px;
-}
+
 .popup select {
   width: 100%;
   padding: 5px;
@@ -388,7 +400,7 @@ th {
 }
 .popup-buttons {
   text-align: center;
-  margin-left: 7%;
+  margin-top: 20px;
 }
 .popup-buttons button {
   padding: 8px 12px;
@@ -492,6 +504,7 @@ th {
   -moz-appearance: none;
   background-color: #fff;
   border: none;
+  margin-left: 20px;
   box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px,
     rgba(60, 64, 67, 0.15) 0px 1px 3px 1px;
   border-radius: 8px;
@@ -521,4 +534,11 @@ th {
   font-size: 14px;
   color: #606060;
   pointer-events: none;
+}
+
+@media (max-width: 640px){
+ #filter-button{
+  padding: 10px 10px;
+  width: 150px;
+ }
 }
