--- a/admin/orders/css/Orderlist.css
+++ b/admin/orders/css/Orderlist.css
@@ -105,6 +105,16 @@
   display: none;
 }
 
+@media (max-width: 850px){
+  .table-container {
+    padding: 0;
+    font-size: 12px;
+  }
+  #orderTableBody tr{
+padding: 5px;
+font-size: 12px;
+  }
+}
 @media (max-width: 768px) {
   .sidebar {
     transform: translateX(-100%);
