--- a/style.css
+++ b/style.css
@@ -42,13 +42,7 @@ main {
 
 /* display data */
 #product-section {
-  display: grid;
-  grid-template-columns: repeat(5, 1fr);
-  width: 90%;
-  row-gap: 30px;
   margin: 40px auto;
-  justify-items: center;
-  height: 500px;
 }
 
 #single-product-div {
@@ -60,7 +54,7 @@ main {
   cursor: pointer;
 }
 
-#product-image-div>img {
+#product-image-div > img {
   width: 250px;
   background-color: #e2e8ed;
 }
@@ -72,7 +66,7 @@ main {
   padding: 5px 0px 5px 10px;
 }
 
-#product-brand+h3 {
+#product-brand + h3 {
   font-weight: bold;
   padding: 0 10px 10px;
 }
@@ -83,7 +77,6 @@ main {
   padding: 0px 10px 10px;
 }
 
-
 /* category */
 #category-section {
   width: fit-content;
@@ -92,7 +85,7 @@ main {
   left: 50%;
   transform: translateX(-50%);
   z-index: 10;
-  padding: 10px 20px 40px;
+  padding: 10px 20px 20px;
   background-color: rgb(255, 255, 255);
   border-radius: 20px;
   box-shadow: rgba(0, 0, 0, 0.05) 0px 0px 0px 1px;
@@ -112,13 +105,13 @@ main {
 
 .category-list-div {
   display: flex;
-  justify-content: space-center;
+  justify-content: space-around;
   margin: auto;
   gap: 50px;
 }
 
 .category-list-div div {
-  width: 100px;
+  padding: 0.5rem;
   border: 1px solid rgb(213, 211, 211);
   justify-items: center;
   border-radius: 10px;
@@ -128,6 +121,7 @@ main {
 .category-list-div div > img {
   padding: 10px 0px 0px 0px;
   width: 80px;
+  object-fit: cover;
 }
 
 .category-list-div div > p {
@@ -139,8 +133,6 @@ main {
 /* product-section */
 
 #product-section {
-  display: flex;
-  flex-direction: column;
   width: 90%;
   margin: 50px auto;
   padding: 10px 20px 40px;
@@ -155,6 +147,7 @@ main {
   justify-content: space-between;
   align-items: center;
   padding: 10px 20px 0px;
+  margin-bottom: 1rem;
 }
 
 .product-header > p {
@@ -165,7 +158,8 @@ main {
 .product-list-div {
   display: grid;
   gap: 20px;
-  grid-template-columns: repeat(5, 1fr);
+  grid-template-columns: repeat(5, minmax(240px, 1fr));
+  justify-items: center;
 }
 
 .product-list-div > div {
@@ -210,8 +204,8 @@ main {
   font-size: 16px;
 }
 
-#rate>i {
-  color: #EDA042;
+#rate > i {
+  color: #eda042;
 }
 
 /* category within sections */
@@ -222,14 +216,12 @@ main {
   border-radius: 10px;
 }
 
-
-
 .categories-container {
   display: flex;
   justify-content: center;
   align-items: center;
   flex-wrap: wrap;
-  gap: 4rem;
+  gap: 5vw;
 }
 
 .category-box {
@@ -250,4 +242,32 @@ main {
 .category-box:hover {
   transform: scale(1.01);
   background-color: #d0d0d0;
+}
+
+@media (max-width: 1500px) {
+  .product-list-div {
+    grid-template-columns: repeat(auto-fill, minmax(240px, 1fr));
+  }
+}
+
+@media (max-width: 1260px) {
+  main {
+    margin-top: 2rem;
+  }
+
+  #category-section {
+    top: 375px;
+    margin: 1rem auto;
+    width: calc(100% - 3rem);
+  }
+  .category-list-div {
+    gap: 2rem;
+    width: 100%;
+    overflow-x: auto;
+    white-space: nowrap;
+  }
+  #product-section {
+    padding: 1rem;
+    margin: 1rem auto;
+  }
 }
