--- a/users/products/css/products.css
+++ b/users/products/css/products.css
@@ -219,3 +219,79 @@ main hr {
   color: #fff;
   border-color: #2b987e;
 }
+
+/* Responsive styles */
+@media (max-width: 1726px) {
+  .product-list-div {
+    grid-template-columns: repeat(4, 1fr);
+  }
+}
+
+@media (max-width: 1496px) {
+  .product-list-div {
+    grid-template-columns: repeat(3, 1fr);
+  }
+}
+
+@media (max-width: 1200px) {
+  .product-list-div {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+@media (max-width: 992px) {
+  .product-list-div {
+    grid-template-columns: repeat(3, 1fr);
+  }
+
+  .filter-section {
+    min-width: 100%;
+    max-height: none;
+    position: static;
+  }
+
+  .display-section {
+    flex-direction: column;
+    align-items: center;
+  }
+}
+
+@media (max-width: 768px) {
+  .product-list-div {
+    grid-template-columns: repeat(2, 1fr);
+  }
+
+  #search-value-display {
+    font-size: 4rem;
+  }
+
+  #price-rating {
+    flex-direction: row;
+    gap: 20px;
+  }
+}
+
+@media (max-width: 576px) {
+  .product-list-div {
+    grid-template-columns: 1fr;
+  }
+
+  #search-value-display {
+    font-size: 3rem;
+  }
+
+  #price-rating {
+    flex-direction: column;
+    gap: 10px;
+  }
+
+  .filter-sort {
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 1rem;
+  }
+
+  .sort-options {
+    width: 100%;
+  }
+}
